@@ -16,6 +16,7 @@ commands= py.test --genscript=pytest1
 [testenv:py25]
 setenv =
     PIP_INSECURE=1
+deps=nose
 
 [testenv:flakes]
 changedir=
@@ -54,14 +55,6 @@ commands=
 changedir=.
 commands=py.test --doctest-modules _pytest
 deps=
-
-[testenv:py32]
-deps=
-    nose
-
-[testenv:py33]
-deps=
-    nose
 
 [testenv:doc]
 basepython=python
